# discord-taskbot

./: .gitignore  LICENSE.md  README.md  build-docker.sh  pyproject.toml  requirements.txt  run.sh
discord_taskbot/: __init__.py  __version.py  bot.py
discord_taskbot/cli/: __init__.py
discord_taskbot/components/: cache.py  client.py  data_classes.py  exceptions.py  logger.py  models.py  persistence.py
discord_taskbot/utils/: __init__.py  client_subclass.py  constants.py  functions.py  intents.py  modals.py
docker/: Dockerfile
media/custom_emojis/edit_files/: in_progress.afphoto  open_discussion.afphoto  pending.afphoto  pending_merge.afphoto  self_assign.afphoto  task_done.afphoto  template.afphoto
